==> williamrob104/brushless-motor-driver/BLDC-Hall-example/lib/SSD1306/ssd1306.c <==
#include "ssd1306.h"
#include <math.h>
#include <stdlib.h>
#include <string.h>  // For memcpy

void ssd1306_WriteCommand(uint8_t byte) {
  // TODO
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
  // TODO
}

void ssd1306_WriteCommand(uint8_t byte) {
  LL_GPIO_ResetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // select OLED
  LL_GPIO_ResetOutputPin(SSD1306_DC_Port, SSD1306_DC_Pin);  // command

  LL_SPI_TransmitData8(SSD1306_SPI_PORT, byte);
  while (!LL_SPI_IsActiveFlag_TXE(SSD1306_SPI_PORT)) {
  }
  while (LL_SPI_IsActiveFlag_BSY(SSD1306_SPI_PORT)) {
  }

  LL_GPIO_SetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // un-select OLED
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
  LL_GPIO_ResetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // select OLED
  LL_GPIO_SetOutputPin(SSD1306_DC_Port, SSD1306_DC_Pin);    // data

  for (size_t i = 0; i < buff_size; i++) {
    LL_SPI_TransmitData8(SSD1306_SPI_PORT, buffer[i]);
    while (!LL_SPI_IsActiveFlag_TXE(SSD1306_SPI_PORT)) {
    }
  }
  while (LL_SPI_IsActiveFlag_BSY(SSD1306_SPI_PORT)) {
  }

  LL_GPIO_SetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // un-select OLED
}

void ssd1306_WriteCommand(uint8_t byte) {
  LL_GPIO_ResetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // select OLED
  LL_GPIO_ResetOutputPin(SSD1306_DC_Port, SSD1306_DC_Pin);  // command
  spi_emulate_transmit(byte);
  LL_GPIO_SetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // un-select OLED
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
  LL_GPIO_ResetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // select OLED
  LL_GPIO_SetOutputPin(SSD1306_DC_Port, SSD1306_DC_Pin);    // data
  for (size_t i = 0; i < buff_size; i++)
    spi_emulate_transmit(buffer[i]);
  LL_GPIO_SetOutputPin(SSD1306_CS_Port, SSD1306_CS_Pin);  // un-select OLED
}

void ssd1306_Init(void) {
  // Init peripheral
  ssd1306_InitPheripheral();

  // Reset OLED
  ssd1306_Reset();

  // Wait for the screen to boot
  LL_mDelay(100);

  // Init OLED
  ssd1306_SetDisplayOn(0);  // display off

  ssd1306_WriteCommand(0x20);  // Set Memory Addressing Mode
  ssd1306_WriteCommand(0x00);  // 00b,Horizontal Addressing Mode; 01b,Vertical Addressing Mode;
                               // 10b,Page Addressing Mode (RESET); 11b,Invalid

  ssd1306_WriteCommand(0xB0);  // Set Page Start Address for Page Addressing Mode,0-7

#ifdef SSD1306_MIRROR_VERT
  ssd1306_WriteCommand(0xC0);  // Mirror vertically
#else
  ssd1306_WriteCommand(0xC8);  // Set COM Output Scan Direction
#endif

  ssd1306_WriteCommand(0x00);  //---set low column address
  ssd1306_WriteCommand(0x10);  //---set high column address

  ssd1306_WriteCommand(0x40);  //--set start line address - CHECK

  ssd1306_SetContrast(0xFF);

#ifdef SSD1306_MIRROR_HORIZ
  ssd1306_WriteCommand(0xA0);  // Mirror horizontally
#else
  ssd1306_WriteCommand(0xA1);  //--set segment re-map 0 to 127 - CHECK
#endif

#ifdef SSD1306_INVERSE_COLOR
  ssd1306_WriteCommand(0xA7);  //--set inverse color
#else
  ssd1306_WriteCommand(0xA6);  //--set normal color
#endif

// Set multiplex ratio.
#if (SSD1306_HEIGHT == 128)
  // Found in the Luma Python lib for SH1106.
  ssd1306_WriteCommand(0xFF);
#else
  ssd1306_WriteCommand(0xA8);  //--set multiplex ratio(1 to 64) - CHECK
#endif

#if (SSD1306_HEIGHT == 32)
  ssd1306_WriteCommand(0x1F);  //
#elif (SSD1306_HEIGHT == 64)
  ssd1306_WriteCommand(0x3F);  //
#elif (SSD1306_HEIGHT == 128)
  ssd1306_WriteCommand(0x3F);  // Seems to work for 128px high displays too.
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

  ssd1306_WriteCommand(0xA4);  // 0xa4,Output follows RAM content;0xa5,Output ignores RAM content

  ssd1306_WriteCommand(0xD3);  //-set display offset - CHECK
  ssd1306_WriteCommand(0x00);  //-not offset

  ssd1306_WriteCommand(0xD5);  //--set display clock divide ratio/oscillator frequency
  ssd1306_WriteCommand(0xF0);  //--set divide ratio

  ssd1306_WriteCommand(0xD9);  //--set pre-charge period
  ssd1306_WriteCommand(0x22);  //

  ssd1306_WriteCommand(0xDA);  //--set com pins hardware configuration - CHECK
#if (SSD1306_HEIGHT == 32)
  ssd1306_WriteCommand(0x02);
#elif (SSD1306_HEIGHT == 64)
  ssd1306_WriteCommand(0x12);
#elif (SSD1306_HEIGHT == 128)
  ssd1306_WriteCommand(0x12);
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

  ssd1306_WriteCommand(0xDB);  //--set vcomh
  ssd1306_WriteCommand(0x20);  // 0x20,0.77xVcc

  ssd1306_WriteCommand(0x8D);  //--set DC-DC enable
  ssd1306_WriteCommand(0x14);  //
  ssd1306_SetDisplayOn(1);     //--turn on SSD1306 panel

  // Clear screen
  ssd1306_Fill(Black);

  // Flush buffer to screen
  ssd1306_UpdateScreen();

  // Set default values for screen object
  SSD1306.CurrentX = 0;
  SSD1306.CurrentY = 0;

  SSD1306.Initialized = 1;
}
