==> QJZCZ/e-load/Device_drv/ssd1306/ssd1306.c <==
#include <rtthread.h>
#include <string.h>
#include "ssd1306.h"
#include "i2c.h"
#include "pin.h"
#include <stdlib.h>
#define SSD1306_CTRL_CMD     0x00
#define SSD1306_CTRL_DATA    0x40

void ssd1306_WriteCommand(uint8_t byte)
{
    uint8_t buf[2] = {SSD1306_CTRL_CMD, byte};
    rt_i2c_master_send(i2c_bus, SSD1306_I2C_ADDR, 0, buf, 2);
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size)
{
    for (int i=0; i<buff_size; i++)
    {
        uint8_t buf[2] = {SSD1306_CTRL_DATA, buffer[i]};
        rt_i2c_master_send(i2c_bus, SSD1306_I2C_ADDR, 0, buf, 2);
    }
}

void ssd1306_Init(void)
{
#if defined(SSD1306_USE_I2C)
    rt_i2c_core_init();

    rt_pin_mode(15, PIN_MODE_OUTPUT);
    rt_pin_mode(23, PIN_MODE_OUTPUT);
    rt_pin_write(15, PIN_HIGH);
    rt_pin_write(23, PIN_HIGH);
    
    i2c_bus = rt_i2c_bus_device_find("i2c1");
    if (i2c_bus == RT_NULL)
    {
        rt_kprintf("SSD1306: can not find %s device\n", SSD1306_I2C_BUS_NAME);
        return;
    }
#endif

    // Reset OLED
    ssd1306_Reset();

    // Wait for the screen to boot
    rt_thread_mdelay(100);

    // Init OLED
    ssd1306_SetDisplayOn(1); //display on

    ssd1306_WriteCommand(0x20); //Set Memory Addressing Mode
    ssd1306_WriteCommand(0x00); // 00b,Horizontal Addressing Mode; 01b,Vertical Addressing Mode;
                                // 10b,Page Addressing Mode (RESET); 11b,Invalid

    ssd1306_WriteCommand(0xB0); //Set Page Start Address for Page Addressing Mode,0-7

#ifdef SSD1306_MIRROR_VERT
    ssd1306_WriteCommand(0xC0); // Mirror vertically
#else
    ssd1306_WriteCommand(0xC8); //Set COM Output Scan Direction
#endif

    ssd1306_WriteCommand(0x00); //---set low column address
    ssd1306_WriteCommand(0x10); //---set high column address

    ssd1306_WriteCommand(0x40); //--set start line address - CHECK

    ssd1306_SetContrast(0xFF);

#ifdef SSD1306_MIRROR_HORIZ
    ssd1306_WriteCommand(0xA0); // Mirror horizontally
#else
    ssd1306_WriteCommand(0xA1); //--set segment re-map 0 to 127 - CHECK
#endif

#ifdef SSD1306_INVERSE_COLOR
    ssd1306_WriteCommand(0xA7); //--set inverse color
#else
    ssd1306_WriteCommand(0xA6); //--set normal color
#endif

// Set multiplex ratio.
#if (SSD1306_HEIGHT == 128)
    // Found in the Luma Python lib for SH1106.
    ssd1306_WriteCommand(0xFF);
#else
    ssd1306_WriteCommand(0xA8); //--set multiplex ratio(1 to 64) - CHECK
#endif

#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(0x1F); //
#elif (SSD1306_HEIGHT == 64)
    ssd1306_WriteCommand(0x3F); //
#elif (SSD1306_HEIGHT == 128)
    ssd1306_WriteCommand(0x3F); // Seems to work for 128px high displays too.
#else
#error "Only 32, 64, or 128 lines of height are supported!"
#endif

    ssd1306_WriteCommand(0xA4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content

    ssd1306_WriteCommand(0xD3); //-set display offset - CHECK
    ssd1306_WriteCommand(0x00); //-not offset

    ssd1306_WriteCommand(0xD5); //--set display clock divide ratio/oscillator frequency
    ssd1306_WriteCommand(0xF0); //--Set divide ratio

    ssd1306_WriteCommand(0xD9); //--set pre-charge period
    ssd1306_WriteCommand(0x22); //

    ssd1306_WriteCommand(0xDA); //--set com pins hardware configuration - CHECK
#if (SSD1306_HEIGHT == 32)
    ssd1306_WriteCommand(0x02);
#else
    ssd1306_WriteCommand(0x12);
#endif

    ssd1306_WriteCommand(0xDB); //--set vcomh
    ssd1306_WriteCommand(0x20); //0x20,0.77xVcc;0x30,0.83xVcc

    ssd1306_WriteCommand(0x8D); //--set DC-DC enable
    ssd1306_WriteCommand(0x14); //

    ssd1306_WriteCommand(0xAF); //--turn on SSD1306 panel

    // Clear screen
    ssd1306_Fill(Black);
    ssd1306_UpdateScreen();

    // Set default values for screen object
    SSD1306.CurrentX = 0;
    SSD1306.CurrentY = 0;

    SSD1306.Initialized = 1;
}
